--- a/APP_BACK_Hoteleria/apigescamp/appsettings.json
+++ b/APP_BACK_Hoteleria/apigescamp/appsettings.json
@@ -7,17 +7,18 @@
     }
   },
   "ConnectionStrings": {
-    "CONNECTIONSTRINGSQL.CTR": "user id=ctr;password=wMjf+*8(xX4R7L$'[s,H;initial catalog=CTR;data source=10.10.201.124,1433;Connect Timeout=30;Min Pool Size=5;Connection Lifetime=300",
-    "CNN_Sistema": "Server=tcp:dev-hoteleria.database.windows.net,1433;Initial Catalog=Hoteleria;Persist Security Info=False;User ID=hoteleria;Password=H@t3leria;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "CONNECTIONSTRINGSQL.CTR": "Server=tcp:hoteleria-sabtech.database.windows.net,1433;Initial Catalog=Hoteleria;Persist Security Info=False;User ID=hoteleria;Password=*Apig3sprd2022#*!!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "CNN_Sistema": "Server=tcp:hoteleria-sabtech.database.windows.net,1433;Initial Catalog=Hoteleria;Persist Security Info=False;User ID=hoteleria;Password=*Apig3sprd2022#*!!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "CredencialesConfig": {
     "Username": "API_GESPRO_PRD",
     "Password": "*Apig3sprd2022#*!!",
     "Conexion": "https://api-proyecto-hoteleria.azurewebsites.net/swagger/index.html",
-    "Sigla": "API_GES"
+    "Sigla": "API_GES",
+    "idEmpresa":  1
   },
   "Jwt": {
-    "Key": "API_GESPRO_PRD.20221001",
+    "Key": "API_GESPRO_PRD.20250901",
     "Issuer": "https://localhost:5001/"
   },
   "AllowedHosts": "*",
