--- a/APP_BACK_Hoteleria/apigescamp/appsettings.json
+++ b/APP_BACK_Hoteleria/apigescamp/appsettings.json
@@ -18,7 +18,8 @@
     "idEmpresa":  1
   },
   "Jwt": {
-    "Key": "API_GESPRO_PRD.20250901",
+    "Key": "EstaEsUnaClaveSuperSecretaDeMasDe32Chars!!",
+    // "Key": "API_GESPRO_PRD.20250901",
     "Issuer": "https://localhost:5001/"
   },
   "AllowedHosts": "*",
